minor documentation fixes

--- a/sling-stanbol-index-page/src/main/resources/initial-content/index.html
+++ b/sling-stanbol-index-page/src/main/resources/initial-content/index.html
@@ -10,7 +10,7 @@
             </a>
         </div>
     </div>
-	<h1>Welcome to Slingstanbol</h1>
+	<h1>Welcome to Sling-Stanbol</h1>
 	<p>Sling-Stanbol integrates Apache Sling and Apache Stanbol. It provides features to access Stanbol functionality to enhance
 	and process Sling content.</p>
 	<h2>Stanbol</h2>
