defining dependenciess to jquery and jquery-ui

--- a/createjs/src/main/resources/createjs.html
+++ b/createjs/src/main/resources/createjs.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript" src="${deps/jquery-ui-1.8.18.custom.min.js}"></script> -->
 	
 	
-	
+		<script type="text/javascript" src="${create-amd.js}"></script>
 		<script type="text/javascript" src="${deps/modernizr.custom.80485.js}"></script>
 		<script type="text/javascript" src="${deps/underscore-min.js}"></script>
 		<script type="text/javascript" src="${deps/backbone-min.js}"></script>
