--- a/create-ria/src/main/resources/index.html
+++ b/create-ria/src/main/resources/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>JS RIA Hello World</title>
 		<script type="text/javascript" src="${index.js}"></script>
-		<script type="text/javascript" src="js/org/wymiwyg/sling-stanbol/createjs/1.0-SNAPSHOT/createjs-1.0-SNAPSHOT.js"></script>
+		<!-- <script type="text/javascript" src="js/org/wymiwyg/sling-stanbol/createjs/1.0-SNAPSHOT/createjs-1.0-SNAPSHOT.js"></script> -->
 		<!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
 <script>
       jQuery(document).ready(function () {
