using 1.0.0.alpha1 tag version

--- a/createjs/src/main/resources/createjs.html
+++ b/createjs/src/main/resources/createjs.html
@@ -15,11 +15,11 @@
 		<script type="text/javascript" src="${deps/underscore-min.js}"></script>
 		<script type="text/javascript" src="${deps/backbone-min.js}"></script>
 		
-		<!-- <script type="text/javascript" src="${deps/vie-min.js}"></script> -->
-		<script type="text/javascript" src="${deps/vie-2.0.0.debug.js}"></script>
+		<script type="text/javascript" src="${deps/vie-min.js}"></script>
+		<!-- <script type="text/javascript" src="${deps/vie-2.0.0.debug.js}"></script> -->
 		<script type="text/javascript" src="${deps/jquery.tagsinput.min.js}"></script>
 		<script type="text/javascript" src="${deps/jquery.rdfquery.min.js}"></script>
-		<script type="text/javascript" src="${deps/annotate.js}"></script>
+		<script type="text/javascript" src="${deps/annotate-min.js}"></script>
 		<script type="text/javascript" src="${deps/hallo.js}"></script>
 		
 		
@@ -40,7 +40,7 @@
 		<script type="text/javascript" src="${jquery.Midgard.midgardNotifications.js}"></script>
 
 		<!-- <script type="text/javascript" src="${collectionWidgets/jquery.Midgard.midgardCollectionAddBetween.js}"></script>  -->
-		<script type="text/javascript" src="${collectionWidgets/jquery.Midgard.midgardCollectionAdd.js}"></script>
+		<!-- <script type="text/javascript" src="${collectionWidgets/jquery.Midgard.midgardCollectionAdd.js}"></script> -->
  		<script type="text/javascript" src="${jquery.Midgard.midgardTags.js}"></script>
 		
 		
